# sanky

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: grpc.rs  lib.rs  main.rs
src/components/proto/: ProtoFileLoader.vue  ServiceList.vue
src/components/request/: RequestForm.vue
src/components/response/: ResponsePanel.vue
src/composables/: useGrpcCall.ts  useProtoParser.ts
src/router/: index.ts
src/types/: grpc.ts
src/utils/: jsonFormatter.ts  payloadValidator.ts
src/views/: GrpcClient.vue
